// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`codegen query without parameters 1`] = `
"/* eslint-disable */
/* prettier-ignore */
/* !!! GENERATED FILE DO NOT EDIT !!! */
import * as __runtime from "@gql-unicorn/runtime"
import { queryBuilder, type BuildReturn, type SelectionDef, type FlattenOnSelection, type LetSelectionDef, type TypeBuilder, type BuilderInfo, typeBuilder, type Vars, type Selection, type ExtendSelection, type GetSelectionDef, type GetTypeName, type TypeOf, type VarOf, type Selected, type Input, type TypeInfo } from "@gql-unicorn/runtime"
const __TypeInfo0 = { tn: "User", get fields() { return { id: __TypeInfo1, name: __TypeInfo2 } } } as const
const __TypeInfo1 = { tn: "ID!" } as const
const __TypeInfo2 = { tn: "String!" } as const
export const __TypeInfo = {
    "User": __TypeInfo0,
} as const
export type _User<SD extends SelectionDef> = 
    & LetSelectionDef<SD>
    & { __typename: "User" }
    & ("id" extends SD[number] ? {
        /**
         * User id
         */
        id: string
    } : unknown)
    & ("name" extends SD[number] ? {
        name: string
    } : unknown)
export type User<SD extends SelectionDef> = _User<FlattenOnSelection<SD, "User">>
export const User = typeBuilder("User") as TypeBuilder<UserSelect<["__typename"], {}, [], never>, "User">
export type UserSelect<S extends SelectionDef, V, P extends string[], E extends string = never> = Selection<User<S>, V>
    & ("id" extends E ? unknown : {
        /**
         * User id
         */
        id: UserSelect<ExtendSelection<S, "id">, V, P, E | "id">
    })
    & ("name" extends E ? unknown : {
        name: UserSelect<ExtendSelection<S, "name">, V, P, E | "name">
    })
    & {
        /**
         * Constraint type selection
         */
        $on<ST, SV extends Vars>(fragment: Selection<ST, SV>): UserSelect<ExtendSelection<S, { $on: Record<GetTypeName<ST>, GetSelectionDef<ST>> }>, MergeVars<V, SV>, P, E>
    }
    & ("$build" extends E ? unknown : {
        /**
         * Build the typed document node
         */
        $build(): any
    })
export interface QueryCurrentUserBuilderFn {
    <ST, SV extends Vars>(queryName: string, select: (select: UserSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"currentUser", ST | null, SV>
    <ST, SV extends Vars>(select: (select: UserSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"currentUser", ST | null, SV>
    builder(queryName: string): UserSelect<["__typename"], {}, [], never>
    builder(): UserSelect<["__typename"], {}, [], never>
}
/**
 * Curent user
 */
export const queryCurrentUser = queryBuilder("currentUser", User) as QueryCurrentUserBuilderFn
export const $ = __runtime.$
export const $$ = __runtime.$$
export type { TypeOf, VarOf, Selected }"
`;

exports[`codegen query with parameters 1`] = `
"/* eslint-disable */
/* prettier-ignore */
/* !!! GENERATED FILE DO NOT EDIT !!! */
import * as __runtime from "@gql-unicorn/runtime"
import { queryBuilder, type BuildReturn, type Arguments, type Variable, type SelectionDef, type FlattenOnSelection, type LetSelectionDef, type TypeBuilder, type BuilderInfo, typeBuilder, type Vars, type Selection, type ExtendSelection, type GetSelectionDef, type GetTypeName, type TypeOf, type VarOf, type Selected, type Input, type TypeInfo } from "@gql-unicorn/runtime"
const __TypeInfo0 = { tn: "ID!" } as const
const __TypeInfo1 = { tn: "User", get fields() { return { id: __TypeInfo0, name: __TypeInfo2 } } } as const
const __TypeInfo2 = { tn: "String!" } as const
export type Arguments0 = {
    id: string | Variable
}
const __Arguments0 = { id: __TypeInfo0 } as const
export const __TypeInfo = {
    "User": __TypeInfo1,
} as const
export type _User<SD extends SelectionDef> = 
    & LetSelectionDef<SD>
    & { __typename: "User" }
    & ("id" extends SD[number] ? {
        /**
         * User id
         */
        id: string
    } : unknown)
    & ("name" extends SD[number] ? {
        name: string
    } : unknown)
export type User<SD extends SelectionDef> = _User<FlattenOnSelection<SD, "User">>
export const User = typeBuilder("User") as TypeBuilder<UserSelect<["__typename"], {}, [], never>, "User">
export type UserSelect<S extends SelectionDef, V, P extends string[], E extends string = never> = Selection<User<S>, V>
    & ("id" extends E ? unknown : {
        /**
         * User id
         */
        id: UserSelect<ExtendSelection<S, "id">, V, P, E | "id">
    })
    & ("name" extends E ? unknown : {
        name: UserSelect<ExtendSelection<S, "name">, V, P, E | "name">
    })
    & {
        /**
         * Constraint type selection
         */
        $on<ST, SV extends Vars>(fragment: Selection<ST, SV>): UserSelect<ExtendSelection<S, { $on: Record<GetTypeName<ST>, GetSelectionDef<ST>> }>, MergeVars<V, SV>, P, E>
    }
    & ("$build" extends E ? unknown : {
        /**
         * Build the typed document node
         */
        $build(): any
    })
export interface QueryUserBuilderFn {
    <ST, SV extends Vars, A>(queryName: string, args: Arguments<A, Arguments0>, select: (select: UserSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"user", ST | null, MergeVars<SV, ToVars<Arguments0, [], A>>>
    <ST, SV extends Vars, A>(args: Arguments<A, Arguments0>, select: (select: UserSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"user", ST | null, MergeVars<SV, ToVars<Arguments0, [], A>>>
    builder<A>(queryName: string, args: Arguments<A, Arguments0>): UserSelect<["__typename"], ToVars<Arguments0, [], A>, [], never>
    builder<A>(args: Arguments<A, Arguments0>): UserSelect<["__typename"], ToVars<Arguments0, [], A>, [], never>
}
export const queryUser = queryBuilder("user", [__Arguments0, User]) as QueryUserBuilderFn
export const $ = __runtime.$
export const $$ = __runtime.$$
export type { TypeOf, VarOf, Selected }"
`;

exports[`codegen mutation without parameters 1`] = `
"/* eslint-disable */
/* prettier-ignore */
/* !!! GENERATED FILE DO NOT EDIT !!! */
import * as __runtime from "@gql-unicorn/runtime"
import { mutationBuilder, type BuildReturn, type TypeOf, type VarOf, type Selected, type Input, type TypeInfo } from "@gql-unicorn/runtime"
export interface SomeMutaionThingBuilderFn {
    (queryName: string): BuildReturn<"someMutaionThing", string, never>
    (): BuildReturn<"someMutaionThing", string, never>
}
export const someMutaionThing = mutationBuilder("someMutaionThing") as SomeMutaionThingBuilderFn
export const $ = __runtime.$
export const $$ = __runtime.$$
export type { TypeOf, VarOf, Selected }"
`;

exports[`codegen mutation with parameters 1`] = `
"/* eslint-disable */
/* prettier-ignore */
/* !!! GENERATED FILE DO NOT EDIT !!! */
import * as __runtime from "@gql-unicorn/runtime"
import { queryBuilder, type BuildReturn, type Arguments, type Variable, type SelectionDef, type FlattenOnSelection, type LetSelectionDef, type TypeBuilder, type BuilderInfo, typeBuilder, type Vars, type Selection, type ExtendSelection, type GetSelectionDef, type GetTypeName, type TypeOf, type VarOf, type Selected, type Input, type TypeInfo } from "@gql-unicorn/runtime"
const __TypeInfo0 = { tn: "ID!" } as const
const __TypeInfo1 = { tn: "String!" } as const
const __TypeInfo2 = { tn: "User", get fields() { return { id: __TypeInfo0, name: __TypeInfo1 } } } as const
export type Arguments0 = {
    id: string | Variable
    name: string | Variable
}
const __Arguments0 = { id: __TypeInfo0, name: __TypeInfo1 } as const
export const __TypeInfo = {
    "User": __TypeInfo2,
} as const
export type _User<SD extends SelectionDef> = 
    & LetSelectionDef<SD>
    & { __typename: "User" }
    & ("id" extends SD[number] ? {
        /**
         * User id
         */
        id: string
    } : unknown)
    & ("name" extends SD[number] ? {
        name: string
    } : unknown)
export type User<SD extends SelectionDef> = _User<FlattenOnSelection<SD, "User">>
export const User = typeBuilder("User") as TypeBuilder<UserSelect<["__typename"], {}, [], never>, "User">
export type UserSelect<S extends SelectionDef, V, P extends string[], E extends string = never> = Selection<User<S>, V>
    & ("id" extends E ? unknown : {
        /**
         * User id
         */
        id: UserSelect<ExtendSelection<S, "id">, V, P, E | "id">
    })
    & ("name" extends E ? unknown : {
        name: UserSelect<ExtendSelection<S, "name">, V, P, E | "name">
    })
    & {
        /**
         * Constraint type selection
         */
        $on<ST, SV extends Vars>(fragment: Selection<ST, SV>): UserSelect<ExtendSelection<S, { $on: Record<GetTypeName<ST>, GetSelectionDef<ST>> }>, MergeVars<V, SV>, P, E>
    }
    & ("$build" extends E ? unknown : {
        /**
         * Build the typed document node
         */
        $build(): any
    })
export interface QueryUpdateUserBuilderFn {
    <ST, SV extends Vars, A>(queryName: string, args: Arguments<A, Arguments0>, select: (select: UserSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"updateUser", ST | null, MergeVars<SV, ToVars<Arguments0, [], A>>>
    <ST, SV extends Vars, A>(args: Arguments<A, Arguments0>, select: (select: UserSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"updateUser", ST | null, MergeVars<SV, ToVars<Arguments0, [], A>>>
    builder<A>(queryName: string, args: Arguments<A, Arguments0>): UserSelect<["__typename"], ToVars<Arguments0, [], A>, [], never>
    builder<A>(args: Arguments<A, Arguments0>): UserSelect<["__typename"], ToVars<Arguments0, [], A>, [], never>
}
export const queryUpdateUser = queryBuilder("updateUser", [__Arguments0, User]) as QueryUpdateUserBuilderFn
export const $ = __runtime.$
export const $$ = __runtime.$$
export type { TypeOf, VarOf, Selected }"
`;

exports[`codegen subscription without parameters 1`] = `
"/* eslint-disable */
/* prettier-ignore */
/* !!! GENERATED FILE DO NOT EDIT !!! */
import * as __runtime from "@gql-unicorn/runtime"
import { subscriptionBuilder, type BuildReturn, type TypeOf, type VarOf, type Selected, type Input, type TypeInfo } from "@gql-unicorn/runtime"
export interface SubscribeOnChangeSomethingBuilderFn {
    (queryName: string): BuildReturn<"onChangeSomething", string, never>
    (): BuildReturn<"onChangeSomething", string, never>
}
export const subscribeOnChangeSomething = subscriptionBuilder("onChangeSomething") as SubscribeOnChangeSomethingBuilderFn
export const $ = __runtime.$
export const $$ = __runtime.$$
export type { TypeOf, VarOf, Selected }"
`;

exports[`codegen subscription with parameters 1`] = `
"/* eslint-disable */
/* prettier-ignore */
/* !!! GENERATED FILE DO NOT EDIT !!! */
import * as __runtime from "@gql-unicorn/runtime"
import { subscriptionBuilder, type BuildReturn, type Arguments, type Variable, type SelectionDef, type FlattenOnSelection, type LetSelectionDef, type TypeBuilder, type BuilderInfo, typeBuilder, type Vars, type Selection, type ExtendSelection, type GetSelectionDef, type GetTypeName, type TypeOf, type VarOf, type Selected, type Input, type TypeInfo } from "@gql-unicorn/runtime"
const __TypeInfo0 = { tn: "String!" } as const
const __TypeInfo1 = { tn: "SomeEvent", get fields() { return { id: __TypeInfo2 } } } as const
const __TypeInfo2 = { tn: "ID!" } as const
export type Arguments0 = {
    type: string | Variable
}
const __Arguments0 = { type: __TypeInfo0 } as const
export const __TypeInfo = {
    "SomeEvent": __TypeInfo1,
} as const
export type _SomeEvent<SD extends SelectionDef> = 
    & LetSelectionDef<SD>
    & { __typename: "SomeEvent" }
    & ("id" extends SD[number] ? {
        id: string
    } : unknown)
export type SomeEvent<SD extends SelectionDef> = _SomeEvent<FlattenOnSelection<SD, "SomeEvent">>
export const SomeEvent = typeBuilder("SomeEvent") as TypeBuilder<SomeEventSelect<["__typename"], {}, [], never>, "SomeEvent">
export type SomeEventSelect<S extends SelectionDef, V, P extends string[], E extends string = never> = Selection<SomeEvent<S>, V>
    & ("id" extends E ? unknown : {
        id: SomeEventSelect<ExtendSelection<S, "id">, V, P, E | "id">
    })
    & {
        /**
         * Constraint type selection
         */
        $on<ST, SV extends Vars>(fragment: Selection<ST, SV>): SomeEventSelect<ExtendSelection<S, { $on: Record<GetTypeName<ST>, GetSelectionDef<ST>> }>, MergeVars<V, SV>, P, E>
    }
    & ("$build" extends E ? unknown : {
        /**
         * Build the typed document node
         */
        $build(): any
    })
export interface SubscribeOnChangeSomethingBuilderFn {
    <ST, SV extends Vars, A>(queryName: string, args: Arguments<A, Arguments0>, select: (select: SomeEventSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"onChangeSomething", ST, MergeVars<SV, ToVars<Arguments0, [], A>>>
    <ST, SV extends Vars, A>(args: Arguments<A, Arguments0>, select: (select: SomeEventSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"onChangeSomething", ST, MergeVars<SV, ToVars<Arguments0, [], A>>>
    builder<A>(queryName: string, args: Arguments<A, Arguments0>): SomeEventSelect<["__typename"], ToVars<Arguments0, [], A>, [], never>
    builder<A>(args: Arguments<A, Arguments0>): SomeEventSelect<["__typename"], ToVars<Arguments0, [], A>, [], never>
}
export const subscribeOnChangeSomething = subscriptionBuilder("onChangeSomething", [__Arguments0, SomeEvent]) as SubscribeOnChangeSomethingBuilderFn
export const $ = __runtime.$
export const $$ = __runtime.$$
export type { TypeOf, VarOf, Selected }"
`;

exports[`codegen Optional array 1`] = `
"/* eslint-disable */
/* prettier-ignore */
/* !!! GENERATED FILE DO NOT EDIT !!! */
import * as __runtime from "@gql-unicorn/runtime"
import { queryBuilder, type BuildReturn, type Arguments, type Variable, type SelectionDef, type FlattenOnSelection, type LetSelectionDef, type TypeBuilder, type BuilderInfo, typeBuilder, type Vars, type Selection, type ExtendSelection, type GetSelectionDef, type GetTypeName, type TypeOf, type VarOf, type Selected, type Input, type TypeInfo } from "@gql-unicorn/runtime"
const __TypeInfo0 = { tn: "UserFilter", get fields() { return { ids: __TypeInfo1 } } } as const
const __TypeInfo1 = { tn: "[ID!]", get items() { return __TypeInfo2 } } as const
const __TypeInfo2 = { tn: "ID!" } as const
const __TypeInfo3 = { tn: "User", get fields() { return { id: __TypeInfo2 } } } as const
export type Arguments0 = {
    filter?: UserFilter | Variable | null
}
const __Arguments0 = { filter: __TypeInfo0 } as const
export const __TypeInfo = {
    "UserFilter": __TypeInfo0,
    "User": __TypeInfo3,
} as const
export type _UserFilter<SD extends SelectionDef> = 
    & LetSelectionDef<SD>
    & { __typename: "UserFilter" }
    & ("ids" extends SD[number] ? {
        ids: Array<string> | null
    } : unknown)
export type UserFilter<SD extends SelectionDef> = _UserFilter<FlattenOnSelection<SD, "UserFilter">>
export const UserFilter = typeBuilder("UserFilter") as TypeBuilder<UserFilterSelect<["__typename"], {}, [], never>, "UserFilter">
export type UserFilterSelect<S extends SelectionDef, V, P extends string[], E extends string = never> = Selection<UserFilter<S>, V>
    & ("ids" extends E ? unknown : {
        ids: UserFilterSelect<ExtendSelection<S, "ids">, V, P, E | "ids">
    })
    & {
        /**
         * Constraint type selection
         */
        $on<ST, SV extends Vars>(fragment: Selection<ST, SV>): UserFilterSelect<ExtendSelection<S, { $on: Record<GetTypeName<ST>, GetSelectionDef<ST>> }>, MergeVars<V, SV>, P, E>
    }
    & ("$build" extends E ? unknown : {
        /**
         * Build the typed document node
         */
        $build(): any
    })
export type _User<SD extends SelectionDef> = 
    & LetSelectionDef<SD>
    & { __typename: "User" }
    & ("id" extends SD[number] ? {
        id: string
    } : unknown)
export type User<SD extends SelectionDef> = _User<FlattenOnSelection<SD, "User">>
export const User = typeBuilder("User") as TypeBuilder<UserSelect<["__typename"], {}, [], never>, "User">
export type UserSelect<S extends SelectionDef, V, P extends string[], E extends string = never> = Selection<User<S>, V>
    & ("id" extends E ? unknown : {
        id: UserSelect<ExtendSelection<S, "id">, V, P, E | "id">
    })
    & {
        /**
         * Constraint type selection
         */
        $on<ST, SV extends Vars>(fragment: Selection<ST, SV>): UserSelect<ExtendSelection<S, { $on: Record<GetTypeName<ST>, GetSelectionDef<ST>> }>, MergeVars<V, SV>, P, E>
    }
    & ("$build" extends E ? unknown : {
        /**
         * Build the typed document node
         */
        $build(): any
    })
export interface QueryUsersBuilderFn {
    <ST, SV extends Vars, A>(queryName: string, args: Arguments<A, Arguments0>, select: (select: UserSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"users", Array<ST>, MergeVars<SV, ToVars<Arguments0, [], A>>>
    <ST, SV extends Vars, A>(args: Arguments<A, Arguments0>, select: (select: UserSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"users", Array<ST>, MergeVars<SV, ToVars<Arguments0, [], A>>>
    builder<A>(queryName: string, args: Arguments<A, Arguments0>): UserSelect<["__typename"], ToVars<Arguments0, [], A>, [], never>
    builder<A>(args: Arguments<A, Arguments0>): UserSelect<["__typename"], ToVars<Arguments0, [], A>, [], never>
    <ST, SV extends Vars>(queryName: string, select: (select: UserSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"users", Array<ST>, SV>
    <ST, SV extends Vars>(select: (select: UserSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"users", Array<ST>, SV>
    builder(queryName: string): UserSelect<["__typename"], {}, [], never>
    builder(): UserSelect<["__typename"], {}, [], never>
}
export const queryUsers = queryBuilder("users", [__Arguments0, User]) as QueryUsersBuilderFn
export const $ = __runtime.$
export const $$ = __runtime.$$
export type { TypeOf, VarOf, Selected }"
`;

exports[`codegen import scalar 1`] = `
"/* eslint-disable */
/* prettier-ignore */
/* !!! GENERATED FILE DO NOT EDIT !!! */
import * as __runtime from "@gql-unicorn/runtime"
import { queryBuilder, type BuildReturn, type SelectionDef, type FlattenOnSelection, type LetSelectionDef, type TypeBuilder, type BuilderInfo, typeBuilder, type Vars, type Selection, type ExtendSelection, type GetSelectionDef, type GetTypeName, type TypeOf, type VarOf, type Selected, type Input, type TypeInfo } from "@gql-unicorn/runtime"
import { type JsonType } from "some-package-name"
const __TypeInfo0 = { tn: "User", get fields() { return { id: __TypeInfo1, data: __TypeInfo2 } } } as const
const __TypeInfo1 = { tn: "ID!" } as const
const __TypeInfo2 = { tn: "JSON!" } as const
export const __TypeInfo = {
    "User": __TypeInfo0,
} as const
export type _User<SD extends SelectionDef> = 
    & LetSelectionDef<SD>
    & { __typename: "User" }
    & ("id" extends SD[number] ? {
        id: string
    } : unknown)
    & ("data" extends SD[number] ? {
        data: JsonType
    } : unknown)
export type User<SD extends SelectionDef> = _User<FlattenOnSelection<SD, "User">>
export const User = typeBuilder("User") as TypeBuilder<UserSelect<["__typename"], {}, [], never>, "User">
export type UserSelect<S extends SelectionDef, V, P extends string[], E extends string = never> = Selection<User<S>, V>
    & ("id" extends E ? unknown : {
        id: UserSelect<ExtendSelection<S, "id">, V, P, E | "id">
    })
    & ("data" extends E ? unknown : {
        data: UserSelect<ExtendSelection<S, "data">, V, P, E | "data">
    })
    & {
        /**
         * Constraint type selection
         */
        $on<ST, SV extends Vars>(fragment: Selection<ST, SV>): UserSelect<ExtendSelection<S, { $on: Record<GetTypeName<ST>, GetSelectionDef<ST>> }>, MergeVars<V, SV>, P, E>
    }
    & ("$build" extends E ? unknown : {
        /**
         * Build the typed document node
         */
        $build(): any
    })
export interface QueryUserBuilderFn {
    <ST, SV extends Vars>(queryName: string, select: (select: UserSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"user", ST | null, SV>
    <ST, SV extends Vars>(select: (select: UserSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"user", ST | null, SV>
    builder(queryName: string): UserSelect<["__typename"], {}, [], never>
    builder(): UserSelect<["__typename"], {}, [], never>
}
export const queryUser = queryBuilder("user", User) as QueryUserBuilderFn
export const $ = __runtime.$
export const $$ = __runtime.$$
export type { TypeOf, VarOf, Selected }"
`;

exports[`codegen import scalar with alias 1`] = `
"/* eslint-disable */
/* prettier-ignore */
/* !!! GENERATED FILE DO NOT EDIT !!! */
import * as __runtime from "@gql-unicorn/runtime"
import { queryBuilder, type BuildReturn, type SelectionDef, type FlattenOnSelection, type LetSelectionDef, type TypeBuilder, type BuilderInfo, typeBuilder, type Vars, type Selection, type ExtendSelection, type GetSelectionDef, type GetTypeName, type TypeOf, type VarOf, type Selected, type Input, type TypeInfo } from "@gql-unicorn/runtime"
import { type JsonType as SomeJsonTypeAlias } from "some-package-name"
const __TypeInfo0 = { tn: "User", get fields() { return { id: __TypeInfo1, data: __TypeInfo2 } } } as const
const __TypeInfo1 = { tn: "ID!" } as const
const __TypeInfo2 = { tn: "JSON!" } as const
export const __TypeInfo = {
    "User": __TypeInfo0,
} as const
export type _User<SD extends SelectionDef> = 
    & LetSelectionDef<SD>
    & { __typename: "User" }
    & ("id" extends SD[number] ? {
        id: string
    } : unknown)
    & ("data" extends SD[number] ? {
        data: SomeJsonTypeAlias
    } : unknown)
export type User<SD extends SelectionDef> = _User<FlattenOnSelection<SD, "User">>
export const User = typeBuilder("User") as TypeBuilder<UserSelect<["__typename"], {}, [], never>, "User">
export type UserSelect<S extends SelectionDef, V, P extends string[], E extends string = never> = Selection<User<S>, V>
    & ("id" extends E ? unknown : {
        id: UserSelect<ExtendSelection<S, "id">, V, P, E | "id">
    })
    & ("data" extends E ? unknown : {
        data: UserSelect<ExtendSelection<S, "data">, V, P, E | "data">
    })
    & {
        /**
         * Constraint type selection
         */
        $on<ST, SV extends Vars>(fragment: Selection<ST, SV>): UserSelect<ExtendSelection<S, { $on: Record<GetTypeName<ST>, GetSelectionDef<ST>> }>, MergeVars<V, SV>, P, E>
    }
    & ("$build" extends E ? unknown : {
        /**
         * Build the typed document node
         */
        $build(): any
    })
export interface QueryUserBuilderFn {
    <ST, SV extends Vars>(queryName: string, select: (select: UserSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"user", ST | null, SV>
    <ST, SV extends Vars>(select: (select: UserSelect<["__typename"], {}, [], "$build">) => Selection<ST, SV>): BuildReturn<"user", ST | null, SV>
    builder(queryName: string): UserSelect<["__typename"], {}, [], never>
    builder(): UserSelect<["__typename"], {}, [], never>
}
export const queryUser = queryBuilder("user", User) as QueryUserBuilderFn
export const $ = __runtime.$
export const $$ = __runtime.$$
export type { TypeOf, VarOf, Selected }"
`;
